--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,16 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:support-annotations:23.0.1'
     compile 'com.android.support:design:23.0.1'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-simplexml:2.0.0-beta2'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+//    compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
+    compile ('com.squareup.retrofit:converter-simplexml:1.9.0'){
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'xpp3', module: 'xpp3'
+    }
     compile 'com.github.bumptech.glide:glide:3.6.1'
 }
+
