--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:support-annotations:23.0.1'
     compile 'com.android.support:design:23.0.1'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-//    compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
-    compile ('com.squareup.retrofit:converter-simplexml:1.9.0'){
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile ('com.squareup.retrofit:converter-simplexml:2.0.0-beta2'){
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'xpp3', module: 'xpp3'
     }
